tests/ui/frontmatter/mismatch-1.rs
---cargo
//~^ ERROR: frontmatter close does not match the opening
----

#![feature(frontmatter)]

fn main() {}
